hphp/test/zend/bad/ext/ext_dso_test/dso_test.php.opts
--config ./test/zend/bad/ext/ext_dso_test/dso_test.ini
